RESOLVED FIXED125452
[GStreamer] Memory leak due to incorrect use of gst_tag_list_merge in TextCombinerGStreamer
https://bugs.webkit.org/show_bug.cgi?id=125452
Summary [GStreamer] Memory leak due to incorrect use of gst_tag_list_merge in TextCom...
Brendan Long
Reported 2013-12-09 07:32:19 PST
[GStreamer] Memory leak due to incorrect use of gst_tag_list_merge in TextCombinerGStreamer
Attachments
Patch (1.79 KB, patch)
2013-12-09 07:34 PST, Brendan Long
no flags
Brendan Long
Comment 1 2013-12-09 07:34:07 PST
Brendan Long
Comment 2 2013-12-09 07:37:44 PST
The problem with this is that gst_tag_list_merge creates a new list, so calling: combinerPad->tags = gst_tag_list_merge(combinerPad->tags, tags); ... Creates a new list and then leaks the old one. gst_tag_list_insert is what I should have used in the first place (and it's what gst_tag_list_merge uses internally).
WebKit Commit Bot
Comment 3 2013-12-09 08:15:46 PST
Comment on attachment 218760 [details] Patch Clearing flags on attachment: 218760 Committed r160312: <http://trac.webkit.org/changeset/160312>
WebKit Commit Bot
Comment 4 2013-12-09 08:15:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.