[GStreamer] Memory leak due to incorrect use of gst_tag_list_merge in TextCombinerGStreamer https://bugs.webkit.org/show_bug.cgi?id=125452

Patch by Brendan Long <b.long@cablelabs.com> on 2013-12-09
Reviewed by Philippe Normand.

No new tests because this fixes a memory leak.

* platform/graphics/gstreamer/TextCombinerGStreamer.cpp:
(webkitTextCombinerPadEvent): Use gst_tag_list_insert instead of gst_tag_list_merge, since we don't want to create a new list.

Canonical link: https://commits.webkit.org/143527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160312 268f45cc-cd09-0410-ab3c-d52691b4dbfc